Section_36_React/320-styling-the-keeper-app-starting/Kubernetes/keeper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keeper-deployment
  labels: 
    app: keeper-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: keeper-app
  template:
    metadata:
      labels:
        app: keeper-app
    spec:
      containers:
      - name: keeper-app
        image: amirrshams/keeperreactapp:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keeper-app-service
spec:
  type: NodePort
  selector:
    app: keeper-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30001
