Section_36_React/320-styling-the-keeper-app-starting/Kubernetes/keeper-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keeper-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: keeper-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keeper-app-service
            port:
              number: 8080
