Section_36_React/320-styling-the-keeper-app-starting/Kubernetes/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: react-app
  ingress:
  - from:
    - podSelector: {}
